--- a/final_project_train.ipynb
+++ b/final_project_train.ipynb
@@ -5,7 +5,7 @@
    "id": "0ee4f78c-2fcc-414e-be8c-d3a2b7d5bf5d",
    "metadata": {},
    "source": [
-    "# Fine-tune Llama 3.1 8B with Unsloth\n",
+    "# Fine-tune Llama 3.1 8B\n",
     "\n",
     "Adapted from source: https://colab.research.google.com/drive/164cg_O7SV7G8kZr_JXqLd6VC7pd86-1Z#scrollTo=aTaDCGTe78bK\n",
     "and\n",
