--- a/final_project_train.ipynb
+++ b/final_project_train.ipynb
@@ -27,22 +27,22 @@
     }
    ],
    "source": [
-    "# check internet connection\n",
-    "import requests\n",
+    "# # check internet connection\n",
+    "# import requests\n",
     " \n",
-    "# initializing URL\n",
-    "url = \"https://www.google.com\"\n",
-    "timeout = 10\n",
-    "try:\n",
-    "    # requesting URL\n",
-    "    request = requests.get(url,\n",
-    "                           timeout=timeout)\n",
-    "    print(\"Internet is on\")\n",
+    "# # initializing URL\n",
+    "# url = \"https://www.google.com\"\n",
+    "# timeout = 10\n",
+    "# try:\n",
+    "#     # requesting URL\n",
+    "#     request = requests.get(url,\n",
+    "#                            timeout=timeout)\n",
+    "#     print(\"Internet is on\")\n",
     " \n",
-    "# catching exception\n",
-    "except (requests.ConnectionError,\n",
-    "        requests.Timeout) as exception:\n",
-    "    print(\"Internet is off\")"
+    "# # catching exception\n",
+    "# except (requests.ConnectionError,\n",
+    "#         requests.Timeout) as exception:\n",
+    "#     print(\"Internet is off\")"
    ]
   },
   {
