Add gpu support for course cluster

--- a/final_project_train.ipynb
+++ b/final_project_train.ipynb
@@ -163,6 +163,7 @@
     "\n",
     "def apply_template(examples):\n",
     "    messages = examples[\"conversations\"]\n",
+    "    print(f\"message is {message}\")\n",
     "    text = [tokenizer.apply_chat_template(message, tokenize=False, add_generation_prompt=False) for message in messages]\n",
     "    return {\"text\": text}\n",
     "\n",
@@ -261,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save_pretrained_merged(\"model\", tokenizer, save_method=\"merged_16bit\")"
+    "model.save_pretrained_merged(\"trained_model\", tokenizer, save_method=\"merged_16bit\")"
    ]
   }
  ],
