--- a/summer_2025/rag.ipynb
+++ b/summer_2025/rag.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# LLM + RAG\n",
     "\n",
-    "Now we're ready to create an LLM + RAG Pipeline! A large portion of this code was adapted from pixegami, specifically the following two videos:\n",
+    "Now we're ready to create an LLM + RAG Pipeline! A large portion of this code was adapted from [pixegami](https://github.com/pixegami), specifically the following two videos:\n",
     "\n",
     "https://www.youtube.com/watch?v=tcqEUSNCn8I\n",
     "\n",
