--- a/summer_2025/rag.ipynb
+++ b/summer_2025/rag.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import os\n",
     "import shutil\n",
     "import chromadb\n",
+    "import pprint\n",
     "\n",
     "from langchain_community.document_loaders.csv_loader import CSVLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
@@ -45,7 +46,9 @@
    "source": [
     "## Loading our Cleaned Data\n",
     "\n",
-    "We'll load our cleaned data in the data folder. In our case, we'll be loading in slang data from urban dictionary as a CSV. We encourage you to check out the data to get a sense of how it's laid out."
+    "We'll load our cleaned data in the data folder. In our case, we'll be loading in slang data from urban dictionary as a CSV. We encourage you to check out the data to get a sense of how it's laid out.\n",
+    "\n",
+    "If you want to use your own custom, this is where you'd make that change. Just point the file path to your own data, and change out CSVLoader with whatever loader works best for your use case. You can see the different types of loaders at [LangChain](https://python.langchain.com/docs/integrations/document_loaders/#common-file-types)."
    ]
   },
   {
@@ -67,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -77,25 +80,16 @@
       "page_content='word: Janky\n",
       "definition: Undesirable; less-than optimum.' metadata={'source': './data/cleaned_slang_data.csv', 'row': 0}\n",
       "<class 'list'>\n",
-      "<class 'langchain_core.documents.base.Document'>\n"
+      "<class 'langchain_core.documents.base.Document'>\n",
+      "There are 2580653 documents\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "2580653"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(slang_document[0])\n",
     "print(type(slang_document))\n",
     "print(type(slang_document[0]))\n",
-    "len(slang_document)\n"
+    "print(\"There are\", len(slang_document), \"documents\")\n"
    ]
   },
   {
@@ -108,12 +102,12 @@
     "\n",
     "Now let's go ahead and chunk our data. Remember that this is cutting up the data into manageable chunks so we can fit it into our vector database (cheatsheet for the LLM)!\n",
     "\n",
-    "Since we're processing many elements, this may take a minute!"
+    "Since we're processing 2.5 Million elements, this may take a minute!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -163,12 +157,12 @@
    "source": [
     "## Creating Our Embedding Function\n",
     "\n",
-    "Let's start by creating our embedding function. In our case, we want to use a specialized embedding model so it's fast and efficient to get embeddings. Since this embedding model is different from our current model, we need to pull it using `ollama pull nomic-embed-text`."
+    "Let's start by creating our embedding function. In our case, we want to use a specialized embedding model so it's fast and efficient to get embeddings. Since this embedding model is different from our LLM inference model, we need to pull it using `ollama pull nomic-embed-text`, which you should have already done from the README."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +172,7 @@
     "      model_name=\"nomic-embed-text\",\n",
     "  )\n",
     "  \n",
-    "  return embeddings\n"
+    "  return embeddings"
    ]
   },
   {
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -453,12 +447,12 @@
     "\n",
     "We will do this by using [Chromadb](https://www.trychroma.com/), which is a vector database!\n",
     "\n",
-    "Let's first set up some variables and clear out any existing items in it (you only need to do this if you're doing a fresh run)."
+    "Let's first set up some variables and clear out any existing items in it (you only need to do this if you're doing a fresh run with brand new data, otherwise we can keep this code commented out)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,14 +465,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, let's start up our chroma db! For this you need to run this command in the terminal!\n",
+    "Next, let's start up our chroma db! For this you should have already run this command in the terminal from the README!\n",
     "\n",
     "`chroma run --host localhost --port 8000 --path ./chroma`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,14 +492,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of existing documents in collection: 500\n",
+      "Number of existing documents in collection: 1000\n",
       "👉 Adding new documents: 500\n"
      ]
     }
