--- a/summer_2025/rag.ipynb
+++ b/summer_2025/rag.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       "definition: Undesirable; less-than optimum.' metadata={'source': './data/cleaned_slang_data.csv', 'row': 0}\n",
       "<class 'list'>\n",
       "<class 'langchain_core.documents.base.Document'>\n",
-      "There are 2580653 documents\n"
+      "There are 628985 documents\n"
      ]
     }
    ],
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that we have over 2.5 Million Slang items! So we're working with quite a large amount of data!\n",
+    "We can see that we have over 600k Slang items! So we're working with quite a large amount of data!\n",
     "\n",
     "## Chunking our data\n",
     "\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
      "text": [
       "page_content='word: Janky\n",
       "definition: Undesirable; less-than optimum.' metadata={'source': './data/cleaned_slang_data.csv', 'row': 0}\n",
-      "2706525\n"
+      "651952\n"
      ]
     }
    ],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -391,9 +391,7 @@
     "\n",
     "chunk = chunks[0].page_content\n",
     "\n",
-    "print(embedding_function([chunk]))\n",
-    "\n",
-    "# print(f'Vector for chunk \"{chunk}\" is: {vector}')"
+    "print(embedding_function([chunk]))"
    ]
   },
   {
@@ -487,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next Let's actually add our chunks to chroma! We'll start by calculating chunk ids so we can update our data at any time. It takes ~8 seconds for 500 records to be embedded and placed into our database. Since our dataset contains over 2.7 million chunks, this would take ~12 hours! Instead, we'll only add 500 documents, but you can feel free to adjust this number as you deem fit!"
+    "Next Let's actually add our chunks to chroma! We'll start by calculating chunk ids so we can update our data at any time. It takes ~8 seconds for 500 records to be embedded and placed into our database. Since our dataset contains over 600k chunks, this would take ~2 to 3 hours! Instead, we'll only add 500 documents, but you can feel free to adjust this number as you deem fit!"
    ]
   },
   {
