--- a/summer_2025/rag.ipynb
+++ b/summer_2025/rag.ipynb
@@ -18,27 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import argparse\n",
-    "import os\n",
-    "import shutil\n",
-    "import chromadb\n",
-    "import pprint\n",
-    "\n",
-    "from langchain_community.document_loaders.csv_loader import CSVLoader\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "from langchain.schema.document import Document\n",
-    "from langchain.evaluation import load_evaluator\n",
-    "from typing import List, Dict, Any\n",
-    "\n",
-    "from langchain_chroma import Chroma\n",
-    "import chromadb.utils.embedding_functions as embedding_functions\n",
-    "\n",
-    "chroma_path=\"chroma\""
-   ]
+   "source": "import argparse\nimport os\nimport shutil\nimport chromadb\nimport pprint\nimport hashlib\n\nfrom langchain_community.document_loaders.csv_loader import CSVLoader\nfrom langchain_text_splitters import RecursiveCharacterTextSplitter\nfrom langchain.schema.document import Document\nfrom langchain.evaluation import load_evaluator\nfrom typing import List, Dict, Any\n\nfrom langchain_chroma import Chroma\nimport chromadb.utils.embedding_functions as embedding_functions\n\nchroma_path=\"chroma\""
   },
   {
    "cell_type": "markdown",
@@ -53,13 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "loader = CSVLoader(file_path='./data/cleaned_slang_data.csv')\n",
-    "slang_document = loader.load()"
-   ]
+   "source": "# Check if data file exists\ndata_file_path = './data/cleaned_slang_data.csv'\nif not os.path.exists(data_file_path):\n    raise FileNotFoundError(f\"Data file not found: {data_file_path}\")\n\nloader = CSVLoader(file_path=data_file_path)\ntry:\n    slang_document = loader.load()\n    if not slang_document:\n        raise ValueError(\"No documents loaded from CSV file\")\n    print(f\"Successfully loaded {len(slang_document)} documents\")\nexcept Exception as e:\n    print(f\"Error loading data: {e}\")\n    raise"
   },
   {
    "cell_type": "markdown",
@@ -70,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -102,12 +80,12 @@
     "\n",
     "Now let's go ahead and chunk our data. Remember that this is cutting up the data into manageable chunks so we can fit it into our vector database (cheatsheet for the LLM)!\n",
     "\n",
-    "Since we're processing 2.5 Million elements, this may take a minute!"
+    "Since we're processing over 600k elements, this may take a minute!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,16 +448,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Initialize our chromadb client locally with special port number so we don't conflict with other things running\n",
-    "client = chromadb.HttpClient(host='localhost', port=8000)\n",
-    "collection_name = \"llm_rag_collection\"\n",
-    "\n",
-    "collection = client.get_or_create_collection(name=collection_name, embedding_function=get_embedding_function())"
-   ]
+   "source": "# Initialize our chromadb client locally with special port number so we don't conflict with other things running\ntry:\n    client = chromadb.HttpClient(host='localhost', port=8000)\n    # Test the connection\n    client.heartbeat()\n    print(\"✅ Successfully connected to ChromaDB\")\nexcept Exception as e:\n    print(f\"❌ Failed to connect to ChromaDB: {e}\")\n    print(\"Make sure ChromaDB is running with: chroma run --host localhost --port 8000 --path ./chroma\")\n    raise\n\ncollection_name = \"llm_rag_collection\"\n\ntry:\n    collection = client.get_or_create_collection(name=collection_name, embedding_function=get_embedding_function())\n    print(f\"✅ Collection '{collection_name}' ready\")\nexcept Exception as e:\n    print(f\"❌ Failed to create/get collection: {e}\")\n    raise"
   },
   {
    "cell_type": "markdown",
@@ -490,66 +461,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of existing documents in collection: 1000\n",
-      "👉 Adding new documents: 500\n"
-     ]
-    }
-   ],
-   "source": [
-    "def calculate_chunk_ids(chunks):\n",
-    "    chunks_with_id = []\n",
-    "    for chunk in chunks:\n",
-    "        # Calculate the chunk ID.\n",
-    "        chunk_id = str(hash(chunk.page_content))\n",
-    "        \n",
-    "        # Add it to the page meta-data.\n",
-    "        chunk.metadata[\"id\"] = chunk_id\n",
-    "        chunks_with_id.append(chunk)\n",
-    "\n",
-    "    return chunks_with_id\n",
-    "\n",
-    "\n",
-    "def add_to_chroma(chunks: list[Document]):\n",
-    "    chunks_with_ids = calculate_chunk_ids(chunks)\n",
-    "    \n",
-    "    # Retrieve existing IDs from the collection\n",
-    "    existing_items = collection.get(include=[])\n",
-    "    existing_ids = set(existing_items[\"ids\"])\n",
-    "    print(f\"Number of existing documents in collection: {len(existing_ids)}\")\n",
-    "\n",
-    "    # Prepare data for new documents\n",
-    "    new_chunk_ids = []\n",
-    "    new_documents = []\n",
-    "    new_metadatas = []\n",
-    "\n",
-    "    for chunk in chunks_with_ids:\n",
-    "        chunk_id = chunk.metadata[\"id\"]\n",
-    "        if chunk_id not in existing_ids:\n",
-    "            new_chunk_ids.append(chunk_id)\n",
-    "            new_documents.append(chunk.page_content)\n",
-    "            new_metadatas.append(chunk.metadata)\n",
-    "\n",
-    "    if new_chunk_ids:\n",
-    "        print(f\"👉 Adding new documents: {len(new_chunk_ids)}\")\n",
-    "        collection.add(\n",
-    "            ids=new_chunk_ids,\n",
-    "            documents=new_documents,\n",
-    "            metadatas=new_metadatas\n",
-    "        )\n",
-    "    else:\n",
-    "        print(\"✅ No new documents to add\")\n",
-    "\n",
-    "# Adjust this number if you want more data!\n",
-    "how_many_documents_to_add = 500\n",
-    "add_to_chroma(chunks[:how_many_documents_to_add])"
-   ]
+   "outputs": [],
+   "source": "def calculate_chunk_ids(chunks):\n    \"\"\"Calculate deterministic chunk IDs using SHA256 hash\"\"\"\n    chunks_with_id = []\n    for chunk in chunks:\n        # Use SHA256 for deterministic, secure hashing\n        chunk_content = chunk.page_content.encode('utf-8')\n        chunk_id = hashlib.sha256(chunk_content).hexdigest()\n        \n        # Add it to the page meta-data.\n        chunk.metadata[\"id\"] = chunk_id\n        chunks_with_id.append(chunk)\n\n    return chunks_with_id\n\n\ndef add_to_chroma(chunks: list[Document]):\n    \"\"\"Add documents to ChromaDB with error handling and batch processing\"\"\"\n    if not chunks:\n        print(\"⚠️ No chunks provided to add\")\n        return\n        \n    chunks_with_ids = calculate_chunk_ids(chunks)\n    \n    try:\n        # Retrieve existing IDs from the collection\n        existing_items = collection.get(include=[])\n        existing_ids = set(existing_items[\"ids\"])\n        print(f\"Number of existing documents in collection: {len(existing_ids)}\")\n\n        # Prepare data for new documents\n        new_chunk_ids = []\n        new_documents = []\n        new_metadatas = []\n\n        for chunk in chunks_with_ids:\n            chunk_id = chunk.metadata[\"id\"]\n            if chunk_id not in existing_ids:\n                new_chunk_ids.append(chunk_id)\n                new_documents.append(chunk.page_content)\n                new_metadatas.append(chunk.metadata)\n\n        if new_chunk_ids:\n            print(f\"👉 Adding new documents: {len(new_chunk_ids)}\")\n            # Add documents in batches to avoid memory issues\n            batch_size = 100\n            for i in range(0, len(new_chunk_ids), batch_size):\n                batch_ids = new_chunk_ids[i:i+batch_size]\n                batch_docs = new_documents[i:i+batch_size]\n                batch_metas = new_metadatas[i:i+batch_size]\n                \n                collection.add(\n                    ids=batch_ids,\n                    documents=batch_docs,\n                    metadatas=batch_metas\n                )\n                print(f\"✅ Added batch {i//batch_size + 1}: {len(batch_ids)} documents\")\n        else:\n            print(\"✅ No new documents to add\")\n            \n    except Exception as e:\n        print(f\"❌ Error adding documents to ChromaDB: {e}\")\n        raise\n\n# Make this configurable - can be adjusted based on requirements\nhow_many_documents_to_add = int(os.getenv('DOCUMENTS_TO_ADD', '500'))\nprint(f\"Processing {how_many_documents_to_add} documents...\")\n\ntry:\n    add_to_chroma(chunks[:how_many_documents_to_add])\nexcept Exception as e:\n    print(f\"Failed to add documents: {e}\")\n    raise"
   },
   {
    "cell_type": "markdown",
