--- a/final_project_train.ipynb
+++ b/final_project_train.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7e1bd1d3-c0ef-4cd2-ab45-33ae23d7a508",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "!export HF_TOKEN=***REMOVED***\n",
+    "!export HF_TOKEN=<Token>\n",
     "!echo $HF_TOKEN\n",
     "\n",
     "import torch\n",
@@ -302,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -316,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
